src/objects/FSTR__Recurring_Business_Process__c.object
<CustomObject>
    <customHelpPage>FSTR__PCEHelp</customHelpPage>
    <description>This object stores the information necessary to generate business processes on a recurring basis.</description>
    <fields>
        <fullName>FSTR__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recurring Business Processes</relationshipLabel>
        <relationshipName>Recurring_Business_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Assign_Process_Object_By__c</fullName>
        <inlineHelpText>This field determines who the generated object should be assigned to.</inlineHelpText>
        <label>Assign Process Object By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Salesforce Account Team Role</fullName>
                </value>
                <value>
                    <fullName>Process Team Role</fullName>
                </value>
                <value>
                    <fullName>Related Account Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Begin_Date__c</fullName>
        <inlineHelpText>Indicates when the recurrence should start generating objects.</inlineHelpText>
        <label>Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSTR__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recurring Business Processes</relationshipLabel>
        <relationshipName>Recurring_Business_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Due_Date_Adjustment__c</fullName>
        <inlineHelpText>Indicates how many days after the creation that a generated process object should be due.</inlineHelpText>
        <label>Due Date Adjustment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__End_Date__c</fullName>
        <inlineHelpText>Indicates if the recurrence should stop at some point.  If this is null the recurrence continues forever.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSTR__Execute_on__c</fullName>
        <description>If the Interval is set to Week, this field indicates the days of the week the Recurring will execute on.  If no days are selected the Recurring will execute 7 days after the previous execution.</description>
        <inlineHelpText>If the Interval is set to Week, this field indicates the days of the week the Recurring will execute on.  If no days are selected the Recurring will execute 7 days after the previous execution.</inlineHelpText>
        <label>Execute on</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Generate_Next_Occurrence__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used in the background to indicate when the recurring should be generated</description>
        <inlineHelpText>used in the background to indicate when the recurring should be generated</inlineHelpText>
        <label>Generate Next Occurrence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Interval_Number__c</fullName>
        <inlineHelpText>This field is used in conjunction with Interval to calculate the next scheduled occurrence. For instance, if 4 is entered and Day is selected the Interval field, 4 days will be added to get the next occurrence.</inlineHelpText>
        <label>Interval Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Interval__c</fullName>
        <inlineHelpText>This field is used in conjunction with Interval Number to calculate the next scheduled occurrence. For instance, if Day is selected and 4 entered in the Interval Number field, 4 days will be added to get the next occurrence.</inlineHelpText>
        <label>Interval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Last_Scheduled_Occurence__c</fullName>
        <label>Last Scheduled Occurrence</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Next_Scheduled_Occurence__c</fullName>
        <inlineHelpText>Date of the next time this process will be fired.</inlineHelpText>
        <label>Next Scheduled Occurrence</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSTR__Obj_Data1__c</fullName>
        <label>Obj Data1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Obj_Data2__c</fullName>
        <label>Obj Data2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Object_Name__c</fullName>
        <inlineHelpText>This field indicates the name of the type of object that this recurring process will generate when it executes.</inlineHelpText>
        <label>Object Type To Create</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Object_Type_To_Create_Name__c</fullName>
        <label>Object Type To Create Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__PCE_Definition_to_Execute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field indicates the definition that should kick off from this recurring.  It is only used for lower versions where criteria is not entered.</inlineHelpText>
        <label>Definition to Execute</label>
        <referenceTo>FSTR__PCE_Definition__c</referenceTo>
        <relationshipLabel>Recurring Business Processes</relationshipLabel>
        <relationshipName>Recurring_Business_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Object_Owner_Queue__c</fullName>
        <inlineHelpText>If the Assign Process Object By field is set to Queue this is the field that indicates the queue.</inlineHelpText>
        <label>Process Object Owner Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Object_Owner_Role__c</fullName>
        <inlineHelpText>If the Assign Process Object By field is set to Role this is the field that indicates the role.</inlineHelpText>
        <label>Process Object Owner Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Object_Owner_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If the Assign Process Object By field is set to User this is the field that indicates that user.</inlineHelpText>
        <label>Process Object Owner User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recurring_Business_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__RecordTypeId__c</fullName>
        <label>Record Type To Create</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Record_Type_To_Create_Name__c</fullName>
        <label>Record Type To Create Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Recurrence_Type__c</fullName>
        <inlineHelpText>This field determines the next scheduled occurrence calculation.  If Created it will calculate the next occurrence based on when the current record was created.  If Completed it will calculate the next occurrence based on when it was completed.</inlineHelpText>
        <label>Recurrence Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created Date</fullName>
                </value>
                <value>
                    <fullName>Completed Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Recurring Business Process</label>
    <listViews>
        <fullName>FSTR__All</fullName>
        <columns>NAME</columns>
        <columns>FSTR__Object_Type_To_Create_Name__c</columns>
        <columns>FSTR__Record_Type_To_Create_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Recurring Business Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Business Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>